feat: order 조회시 payment null인지 확인